@@ -1,3 +1,8 @@
+2009-06-24  svu
+
+	* libxklavier/xklavier_config.c, libxklavier/xklavier_config_iso.c: avoiding
+	duplicated config items (in main and extras)
+
 2009-06-23  svu
 
 	* configure.in, libxklavier/xkl_config_registry.h,
